alignment issue

--- a/love/main.css
+++ b/love/main.css
@@ -13,6 +13,7 @@
   }
   
   body {
+    position: relative;
     overflow: hidden;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -27,9 +28,13 @@
   }
 
   .birthday-text {
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
-    margin-top: 50px;
     font-family: 'Pacifico', cursive;
+    z-index: 10;
   }
   
   .birthday-text h1 {
